--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -27,8 +27,11 @@ jobs:
       # add software dependencies here and any libraries
       
       # From https://github.com/actions/setup-python
-      # - name: Setup Python
-      #   uses: actions/setup-python@v3
+      - name: Setup Python
+        uses: actions/setup-python@v3
+
+      - name: Setup Jupyter
+        run: pip install jupyter
 
       # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
       # - name: Setup R
