--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
         text: Home
       - About-Snakemake.qmd
       - Snakemake-Essentials.qmd
+      - Qiime2-Applications.qmd
 
 
 format:
