add cluster friendly snakemake to nav

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
         text: Home
       - About-Snakemake.qmd
       - Snakemake-Essentials.qmd
+      - Cluster-friendly-Snakemake.qmd
 
 
 format:
