--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,14 @@ project:
   type: website
 
 website:
-  title: "Effective-Snakemake-HPC"
+  title: "Effective Snakemake on Computer Clusters"
   navbar:
     left:
-      - href: index.qmd
+      - href: quarto/index.qmd
         text: Home
-      - About-Snakemake.qmd
-      - Snakemake-Essentials.qmd
-      - Cluster-friendly-Snakemake.qmd
+      - quarto/About-Snakemake.qmd
+      - quarto/Snakemake-Essentials.qmd
+      - quarto/Cluster-friendly-Snakemake.qmd
 
 
 format:
