--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
         text: Home
       - quarto/About-Snakemake.qmd
       - quarto/Snakemake-Essentials.qmd
+      - quarto/Elaborating-rules.qmd
       - quarto/Cluster-friendly-Snakemake.qmd
       - quarto/Qiime2-Applications.qmd
 
